src/objects/OAuth2_Token__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expires_Date__c</fullName>
        <formula>IF(ISBLANK(Expires_In__c), null, LastModifiedDate +  Expires_In__c / (60 * 60 * 24))</formula>
        <label>Expires_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expires_In__c</fullName>
        <label>Expires In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OAuth_Service__c</fullName>
        <label>OAuth Service</label>
        <referenceTo>OAuthService__c</referenceTo>
        <relationshipLabel>OAuth2 Tokens</relationshipLabel>
        <relationshipName>OAuth2_Tokens</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OAuth2_Tokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Type__c</fullName>
        <label>Token Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth2 Token</label>
    <nameField>
        <displayFormat>OT2-{00000000}</displayFormat>
        <label>OAuth2 Token No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAuth2 Tokens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>